...
        showAboutUs: false,
      ),
      body:
          cartItems.isEmpty
              ? const Center(
                child: Text(
                  'Twój koszyk jest pusty',
                  style: TextStyle(color: Colors.black),
                ),
              )
              : Column(
                children: [
                  Expanded(
...
                    child: SafeArea(
                      top: false,
                      child: SizedBox(
                        width: double.infinity,
                        height: 56,
                        child: ElevatedButton(
                          key: const ValueKey('order_for_button'),
                          style: ElevatedButton.styleFrom(
                            backgroundColor: AppColors.primary,
                            shape: RoundedRectangleBorder(
                              borderRadius: BorderRadius.circular(16),
                            ),
                          ),
...
