...
              Text(
                '${amount.toStringAsFixed(2)} zł',
                style: AppTextStyles.paymentAmount,
              ),
              const SizedBox(height: 32),
              ElevatedButton.icon(
                key: const ValueKey('pay_button'),
                style: ElevatedButton.styleFrom(
                  backgroundColor: AppColors.primary,
                  minimumSize: const Size(double.infinity, 50),
                  shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(16),
                  ),
...
